aws-terraform/base-code/eks-mix/0001-k8s-examples/LoadBalancer/ingress-with-alb/0010-ingress-cert-aut-discovery-via-tls/phone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-deployment
  labels:
    app: phone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phone
  template:
    metadata:
      labels:
        app: phone
    spec:
      containers:
        - name: phone
          image: leonardtia/tia:phone
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phone-nodeport-service
  labels:
    app: phone
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: phone
  ports:
    - port: 80
      targetPort: 80
